# tendermint-zk-ibc

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  foundry.toml  package-lock.json  package.json  solpb.sh
.github/workflows/: test.yml
artifacts/: .gitignore
artifacts/dummy/: common_circuit_data.json  proof_with_public_inputs.json  verifier_only_circuit_data.json
contracts/: ITendermintZKLightClient.sol  ITendermintZKLightClientErrors.sol  TendermintHeader.sol  TendermintTreeVerifier.sol  TendermintZKLightClient.sol  TendermintZKLightClientProtoMarshaler.sol
contracts/groth16/: Groth16CommitmentVerifier.sol  Groth16Verifier.sol  TendermintZKLightClientGroth16.sol  TendermintZKLightClientGroth16Commitment.sol
contracts/mock/: TendermintZKLightClientMock.sol
contracts/plonk/: PlonkVerifier.sol  TendermintZKLightClientPlonk.sol
e2e/: .gitignore  Makefile  compose.yaml  docker.mk  go.mod  go.sum
e2e/configs/: path.json
e2e/relayer/: main.go
e2e/scripts/: fixture  handshake  init-rly  transfer
go/: circuit.go  go.mod  go.sum  main.go  prove.go  service.go  setup.go  utils.go
go/relay/: Makefile  TendermintZKLightClient.pb.go  codec.go  config.go  config.pb.go  proof.go  proof_test.go  prover.go  tendermint.go  tree.go  types.go  zkprover.go
src/: circuits.rs  commands.rs  config.rs  gnark_verifier.rs  main.rs  tendermint_client.rs
src/circuits/: skip.rs  step.rs
src/commands/: prove.rs  service.rs
test/: Groth16CommitmentVerifier.t.sol  Groth16Verifier.t.sol  VerifyMembership.t.sol
test/data/: groth16-commitment_proof.json  (+2 more)
(+35 files in other folders)
