[package]
name = "tendermint-zk-lc"
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.19"
env_logger = "0.10.0"
cfg-if = "1.0"
dotenv = "0.15.0"
reqwest = "0.11.18"
anyhow = "1.0.71"
clap = { version = "3.2", features = ["derive"] }
konst = "0.3.9"
sha2 = "0.10.8"
serde = { version = "1.0.175", features = ["derive"] }
serde_json = "1.0.103"
ethers = "2.0.9"
tendermint = "0.33.0"
tokio = { version = "1.29.1", features = ["full"] }
axum = { version = "=0.7.4" }
tower = { version = "0.4.13", features = ["limit"] }
tower-http = { version = "0.5.2", features = ["catch-panic"] }
plonky2x = { git = "https://github.com/succinctlabs/succinctx.git" }
tendermintx = { git = "https://github.com/succinctlabs/tendermintx.git", rev = "30fa25a72e9a8364abe33784e10a77d2cbe9810b" }

[features]
default = []
step = []
